src/parse/snapshots/protox__parse__tests__parse_reserved-2.snap
---
source: src/parse/tests.rs
expression: parser.parse_reserved()
---
Ok(
    Reserved {
        kind: Ranges(
            [
                ReservedRange {
                    start: Int {
                        negative: false,
                        value: 0,
                        span: 9..10,
                    },
                    end: None,
                },
                ReservedRange {
                    start: Int {
                        negative: false,
                        value: 2,
                        span: 12..13,
                    },
                    end: Int(
                        Int {
                            negative: false,
                            value: 3,
                            span: 17..18,
                        },
                    ),
                },
                ReservedRange {
                    start: Int {
                        negative: false,
                        value: 5,
                        span: 20..21,
                    },
                    end: Max,
                },
            ],
        ),
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..29,
    },
)
