src/parse/snapshots/protox__parse__tests__parse_reserved-4.snap
---
source: src/parse/tests.rs
expression: parser.parse_reserved()
---
Ok(
    Reserved {
        kind: Names(
            [
                Ident {
                    value: "foo",
                    span: 9..14,
                },
                Ident {
                    value: "bar",
                    span: 16..21,
                },
            ],
        ),
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..22,
    },
)
