src/parse/snapshots/protox__parse__tests__parse_reserved-5.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "a positive integer or string",
            found: ";",
            span: 9..10,
        },
    ],
)
