src/parse/snapshots/protox__parse__tests__parse_reserved-6.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_reserved() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Reserved {
        kind: Names(
            [
                Ident {
                    value: "0foo",
                    span: 9..15,
                },
            ],
        ),
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..16,
    },
)
